duniverse/menhirLib.20200211/test/static/bad/production-group.mly
%token A B C
%start main
%%
main: x = A | x = B y = C { x }
